small bug fix + aligning the buttons better

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -206,3 +206,7 @@ body a:hover {
 #about-last-paragraph {
   margin-bottom: -0.3em;
 }
+
+.left-align-button {
+  margin-left:0;
+}
